--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,24 +1,23 @@
-{%load static%}
+{% load static %}
 
-        <head>
-            <title>멋사</title>
-            <!-- 합쳐지고 최소화된 최신 CSS -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-        
-        <!-- 부가적인 테마 -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
-        
-        <!-- 합쳐지고 최소화된 최신 자바스크립트 -->
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
-        <body>
-            <div class="container" style="text-align: center">
-                <img src="http://dreamicus.com/data/image/image-01.jpg">
-                <h2>이건 무슨 페이지</h2>
-                <br>
-                <a href="{% url 'new'%}" class="top-menu" style="color : black;">글쓰기</a>
-                <a href="{% url 'home'%}"  style="color : black;">홈으로</a>
+<head>
+    <title>멋사</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+</head>
+
+<body>
+    <div class="container" style="text-align: center">
+            <br>
+        <div class="row">
+            <h1 class="col-6">이수지</h1>
+            <div class="col-6">
+                <a href="{% url 'accounts:signup'%}">Sign up</a>
                 <a href="{% url 'login'%}">Login</a>
-             <a href="{% url 'accounts:signup'%}">회원가입</a>
-    {%block content%}
-    {%endblock%}
+            </div>
+        </div>
+        <br>
+        {% block content %}
+        {% endblock %}
+    </div>
 </body>
