--- a/blog/templates/blog/main.html
+++ b/blog/templates/blog/main.html
@@ -1,12 +1,46 @@
-{%extends "blog/base.html"%}
+<head>
+    <title>멋사</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+</head>
 
-{%block content%}
-<div>
-    <h2>{{post.title}}</h2>
-    <p>{{post.created_date}}</p>
-    <p>{{post.text}}</p>
-    <p>{{post.author}}</p>
-    <a href="{% url 'edit' post.id %}">수정</a>
-    <a href="{% url 'delete' post.id %}">삭제</a>
-</div>
-{%endblock%}
+<body>
+    <div class="container" style="text-align: center">
+        <h1>{{post.title}}</h1>
+        <div style="float: left">
+            <a href="{% url 'edit' post.id %}">수정</a>
+            <a href="{% url 'delete' post.id %}">삭제</a>
+            <a href="{% url 'home' %}">홈으로</a>
+        </div>
+
+        <br>
+        <p>{{post.text}}</p>
+        <br>
+
+        <hr>
+
+        {% for comment in post.comments.all %}
+        <div class="row">
+            <div class="col-9" style="text-align:left">
+                <strong>{{user.username}}</strong>
+                {{comment.text|linebreaks}}</div>
+            <div class="col-3"><a href="{% url 'delete_comment' comment_id=comment.id %}">댓글삭제</a></div>
+        </div>
+        {%empty%}
+        <p>댓글이 없습니다.</p>
+        {%endfor%}
+        <div class="form-group">
+                <div class="row" >
+            <div class="col-9">
+            <form method="POST" action="{% url 'add_comment' post.id%}">
+                {% csrf_token %}
+                {{form.as_table}}
+            </div>
+            <div class="col-3">
+                <button type="submit" class="save btn btn-default">작성</button>
+            </div>
+        </div>
+        </form>
+        </div>
+    </div>
+</body>
