--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -21,7 +21,8 @@
     </div>
     {%for post in posts.all%}
     <br>
-    <h2 style="text-align: center"><a href="{% url 'main' post.id %}">{{post.summary}}...</a></h2>
+    <h2 style="text-align: center"><a href="{% url 'main' post.id %}">{{post.summary}}</a></h2>
+
     {%endfor%}
     <br>
     <a href="{% url 'new'%}">글쓰기</a>
